Added endpoints to get and post research survey. Added tests
